More spacing fixes

--- a/css/style.css
+++ b/css/style.css
@@ -20,9 +20,9 @@ body {
 }
 
 .floatingTab {
-  padding: 0;
+  padding: 4px;
   position: fixed;
-  bottom: 10px;
+  bottom: 30px;
   left: 10px;
   right: 10px;
   border-radius: 15px;
